@@ -18,7 +18,15 @@ Page {
 
         PullDownMenu {
             MenuItem {
-                text: "Hello world"
+                text: qsTr("About")
+                onClicked: pageStack.push(Qt.resolvedUrl("AboutPage.qml"),{context: accountsPage.context})
+            }
+            MenuItem {
+                text: qsTr("Options")
+                onClicked: pageStack.push(Qt.resolvedUrl("OptionsPage.qml"),{context: accountsPage.context})
+            }
+            MenuItem {
+                text: qsTr("Add account ...")
             }
         }
 
@@ -56,6 +64,7 @@ Page {
                     id: contextmenu
                     MenuItem {
                         text: qsTr("Rename")
+                        enabled: false
                     }
 
                     MenuItem {
@@ -66,7 +75,18 @@ Page {
                         text: qsTr("Remove")
                     }
                 }
-                height: accountRow.height + contextmenu.height
+
+                onClicked: {
+                    pageStack.pushAttached(Qt.resolvedUrl("TeamsPage.qml"),
+                                           {
+                                               server_index: role_server_index,
+                                               servername: role_name,
+                                               context: accountsPage.context
+                                           });
+                    pageStack.navigateForward(PageStackAction.Animated)
+                }
+
+                contentHeight: accountRow.height// + contextmenu.height
 
                 //role_name
                 //role_url
@@ -126,11 +146,11 @@ Page {
                                 qsTr("Offline")
                                 break;
                             }
-                        font.pixelSize: Theme.fontSizeSmall
+                        font.pixelSize: Theme.fontSizeLarge
                         text: qsTr("name: ") + role_name + "\n" +
                               qsTr("url: ") + role_url + "\n" +
                               qsTr("status: ") + statusText
-                        height: contentHeight * 3
+                        height: contentHeight
                         width: parent.width - parent.spacing - iconItem.width
                     }//Label
                 }//Row
