@@ -43,7 +43,7 @@ Page {
             }
             MenuItem {
                 text: qsTr("Options")
-                onClicked: pageStack.push(Qt.resolvedUrl("OptionsPage.qml"))
+                onClicked: pageStack.push(Qt.resolvedUrl("OptionsPage.qml"),{context: channelspage.context})
             }
         }
 
